// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar rendering renders expected elements 1`] = `
<div
  className="ProgressBar ProgressBar--default ProgressBar--big ProgressBar--active"
>
  <div
    className="ProgressBar__label"
    id="random-id-label"
  >
    <span
      className="ProgressBar__labelText"
    >
      Test label
    </span>
  </div>
  <Layer
    aria-invalid={false}
    aria-labelledby="random-id-label"
    aria-valuemax={100}
    aria-valuemin="0"
    aria-valuenow={20}
    className="ProgressBar__track"
    id="random-id"
    role="progressbar"
  >
    <div
      className="ProgressBar__bar"
      style={
        {
          "transform": "scaleX(0.2)",
        }
      }
    />
  </Layer>
</div>
`;

exports[`ProgressBar rendering renders expected elements when optional properties are set 1`] = `
<div
  className="ProgressBar ProgressBar--default ProgressBar--big ProgressBar--active TestClass"
>
  <div
    className="ProgressBar__label"
    id="random-id-label"
  >
    <span
      className="ProgressBar__labelText"
    >
      Test label
    </span>
  </div>
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    aria-labelledby="random-id-label"
    aria-valuemax={100}
    aria-valuemin="0"
    aria-valuenow={20}
    className="ProgressBar__track"
    id="random-id"
    role="progressbar"
  >
    <div
      className="ProgressBar__bar"
      style={
        {
          "transform": "scaleX(0.2)",
        }
      }
    />
  </Layer>
  <div
    className="ProgressBar__helper"
    id="random-id-helper"
  >
    Test helper
  </div>
</div>
`;

exports[`ProgressBar rendering renders expected elements when status is error 1`] = `
<div
  className="ProgressBar ProgressBar--default ProgressBar--big ProgressBar--error"
>
  <div
    className="ProgressBar__label"
    id="random-id-label"
  >
    <span
      className="ProgressBar__labelText"
    >
      Test label
    </span>
    <ErrorFilled
      className="ProgressBar__icon"
    />
  </div>
  <Layer
    aria-invalid={true}
    aria-labelledby="random-id-label"
    aria-valuemax={100}
    aria-valuemin="0"
    aria-valuenow={0}
    className="ProgressBar__track"
    id="random-id"
    role="progressbar"
  >
    <div
      className="ProgressBar__bar"
      style={null}
    />
  </Layer>
</div>
`;

exports[`ProgressBar rendering renders expected elements when status is finished 1`] = `
<div
  className="ProgressBar ProgressBar--default ProgressBar--big ProgressBar--finished"
>
  <div
    className="ProgressBar__label"
    id="random-id-label"
  >
    <span
      className="ProgressBar__labelText"
    >
      Test label
    </span>
    <CheckmarkFilled
      className="ProgressBar__icon"
    />
  </div>
  <Layer
    aria-invalid={false}
    aria-labelledby="random-id-label"
    aria-valuemax={100}
    aria-valuemin="0"
    aria-valuenow={100}
    className="ProgressBar__track"
    id="random-id"
    role="progressbar"
  >
    <div
      className="ProgressBar__bar"
      style={null}
    />
  </Layer>
</div>
`;

exports[`ProgressBar rendering renders expected elements when value is not set 1`] = `
<div
  className="ProgressBar ProgressBar--default ProgressBar--big ProgressBar--indeterminate"
>
  <div
    className="ProgressBar__label"
    id="random-id-label"
  >
    <span
      className="ProgressBar__labelText"
    >
      Test label
    </span>
  </div>
  <Layer
    aria-invalid={false}
    aria-labelledby="random-id-label"
    aria-valuemax={100}
    aria-valuemin="0"
    className="ProgressBar__track"
    id="random-id"
    role="progressbar"
  >
    <div
      className="ProgressBar__bar"
      style={null}
    />
  </Layer>
</div>
`;
